<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/torrentleech" android:summary="@string/configure_your_torrentleech_credentials" android:key="torrentleech">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_torrentleech"
            android:title="@string/use"
            android:summary="@string/check_this_to_use_this_service"/>
        <EditTextPreference
            android:name="EditText Preference"
            android:defaultValue=""
            android:key="torrentleech_username"
            android:dependency="use_torrentleech"
            android:title="@string/username"
            android:summary="@string/enter_your_username"/>
        <EditTextPreference
            android:name="EditText Preference"
            android:defaultValue=""
            android:inputType="textPassword"
            android:key="torrentleech_password"
            android:dependency="use_torrentleech"
            android:title="@string/password"
            android:summary="@string/enter_your_password"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/kickasstorrents" android:summary="@string/configure_your_kickasstorrents_options" android:key="kickasstorrents">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_kickasstorrents"
            android:title="@string/use" 
            android:summary="@string/check_this_to_use_this_service"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/fenopytorrents" android:summary="@string/configure_your_fenopytorrents_options" android:key="fenopytorrents">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_fenopytorrents"
            android:title="@string/use" 
            android:summary="@string/check_this_to_use_this_service"/>
    </PreferenceCategory>    
    
</PreferenceScreen>