<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/sort"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort"/>
    <item
        android:id="@+id/filter"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/filter"/>
    <item
        android:id="@+id/group"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/group"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="130"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always|withText"
        android:title="Search"/>

</menu>